# symulator-ukladow-logicznych

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md  Symulator.cpp  Symulator.h  build.bat
include/: Symulator.h
lib/: CMakeLists.txt
lib/raylib/include/: gui_file_dialog.h
raylib/include/: gui_file_dialog.h
scripts/: build.bat
src/: Button.cpp  CMakeLists.txt  InputBox.cpp  Menu.cpp  Symulator.cpp
